--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,6 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
-        <!--TODO (Step 2: Modify the activity parameters and theme as per requirement.)-->
-        <!--START-->
         <activity
             android:name=".MainActivity"
             android:screenOrientation="portrait"
@@ -23,6 +20,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <!--TODO (STEP 2: Modify the activity theme and params as per our requirements.)-->
+        <!--START-->
+        <activity
+            android:name=".QuizQuestionsActivity"
+            android:screenOrientation="portrait" />
         <!--END-->
     </application>
 
