--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".ResultActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/NoActionBarTheme"
+            ></activity>
         <activity
             android:name=".MainActivity"
             android:screenOrientation="portrait"
@@ -19,14 +23,11 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-
-        <!--TODO (STEP 2: Modify the activity theme and params as per our requirements.)-->
-        <!--START-->
+        </activity> <!-- TODO (STEP 2: Modify the activity theme and params as per our requirements.) -->
+        <!-- START -->
         <activity
             android:name=".QuizQuestionsActivity"
             android:screenOrientation="portrait" />
-        <!--END-->
     </application>
 
 </manifest>
